chore: submit frontend and backend updates